<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_light_white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:scrollbars="none">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/color_blue"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginStart="@dimen/dp_10"
            android:padding="@dimen/dp_10"
            android:src="@drawable/back_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/feedback"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_16" />


    </FrameLayout>

    <com.zyp.cardview.YcCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        app:ycCardBackgroundColor="@color/color_white"
        app:ycCardCornerRadius="6dp"
        app:ycCardElevation="3dp"
        app:ycCardPreventCornerOverlap="true"
        app:ycStartShadowColor="@color/color_cardview_shadow">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/shape_corner_white"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_question"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:dropDownWidth="match_parent"
                    android:entries="@array/question_style"
                    android:spinnerMode="dropdown"
                    android:theme="@style/spinner2" />
            </LinearLayout>

        </LinearLayout>

    </com.zyp.cardview.YcCardView>

    <com.zyp.cardview.YcCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        app:ycCardBackgroundColor="@color/color_white"
        app:ycCardCornerRadius="6dp"
        app:ycCardElevation="3dp"
        app:ycCardPreventCornerOverlap="true"
        app:ycStartShadowColor="@color/color_cardview_shadow">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_10"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:text="问题描述:"
                    android:textColor="@color/color_blue" />

                <EditText
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_120"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/dp_5"
                    android:background="@drawable/shape_rectangle_grey"
                    android:gravity="top"
                    android:hint="@string/feedback_hint"
                    android:minLines="5"
                    android:padding="@dimen/dp_10"
                    android:src="@drawable/mine_privacy"
                    android:textColorHint="@color/color_dark_grey"
                    android:textSize="@dimen/sp_13" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_10"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="联系方式:"
                    android:textColor="@color/color_blue" />

                <EditText
                    android:id="@+id/pay_account"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/dp_5"
                    android:background="@drawable/shape_rectangle_grey"
                    android:gravity="start|center"
                    android:hint="@string/feedback_pay_account"
                    android:inputType="text"
                    android:paddingStart="@dimen/dp_10"
                    android:paddingEnd="10dp"
                    android:singleLine="true"
                    android:src="@drawable/mine_privacy"
                    android:textColorHint="@color/color_dark_grey"
                    android:textSize="@dimen/sp_12" />

                <EditText
                    android:id="@+id/contact"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/dp_5"
                    android:background="@drawable/shape_rectangle_grey"
                    android:gravity="start|center"
                    android:hint="@string/feedback_contact"
                    android:inputType="phone"
                    android:paddingStart="@dimen/dp_10"
                    android:paddingEnd="10dp"
                    android:singleLine="true"
                    android:src="@drawable/mine_privacy"
                    android:textColorHint="@color/color_dark_grey"
                    android:textSize="@dimen/sp_12" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_10"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:text="凭证上传:(小于3MB)"
                        android:textColor="@color/color_blue" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_80"
                    android:layout_marginTop="@dimen/dp_5"
                    android:orientation="horizontal">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/pics_recyclerview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:overScrollMode="never" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </com.zyp.cardview.YcCardView>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@drawable/shape_corner_blue"
        android:text="@string/feedback_submit"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_16" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp" />

</LinearLayout>